--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@dfinity/agent": "^0.9.3",
-    "@dfinity/candid": "^0.9.3",
-    "@dfinity/principal": "^0.9.3",
+    "@dfinity/agent": "0.10.2",
+    "@dfinity/assets": "^0.15.0",
+    "@dfinity/candid": "0.10.2",
+    "@dfinity/principal": "0.10.2",
     "@psychedelic/dab-js": "latest",
-    "@psychedelic/plug-connect": "^0.1.4",
+    "@psychedelic/plug-connect": "latest",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -54,6 +55,7 @@
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "cross-env": "^7.0.3",
+    "ic-stoic-identity": "^2.0.0",
     "react-app-rewired": "^2.2.1"
   }
 }
